[tool.poetry]
name = "suraj_datalab"
version = "0.1.1"
description = "A package for data analysis"
authors = ["Suraj Wate <suraj.wate@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
ipython = "^8.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.33"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
